@@ -2,7 +2,7 @@ import java.time.LocalDateTime
 
 allprojects {
     group = 'com.baomidou'
-    version = "3.5.2.6-SNAPSHOT"
+    version = "3.5.3.2-SNAPSHOT"
 }
 
 ext {
@@ -16,6 +16,7 @@ ext {
         mybatisSpringBootStarterVersion = '2.2.2',
         springVersion = '5.3.15',
         springBootVersion = '2.5.3',
+        springCloudVersion = '3.1.1',
         jsqlparserVersion = '4.4', // 4.5 有bug
         junitVersion = '5.9.0',
     ]
@@ -37,12 +38,11 @@ ext {
         "aspectjrt"                  : "org.aspectj:aspectjrt:1.9.9.1",
         "cglib"                      : "cglib:cglib:3.3.0",
         "imadcn"                     : "com.imadcn.framework:idworker:1.5.0",
-        "spring-cloud-commons"       : "org.springframework.cloud:spring-cloud-commons:3.0.3",
+        "spring-cloud-commons"       : "org.springframework.cloud:spring-cloud-commons:${springCloudVersion}",
 
         "javax.servlet-api"          : "javax.servlet:javax.servlet-api:4.0.1",
         "aspectjweaver"              : "org.aspectj:aspectjweaver:1.9.9.1",
         "slf4j-api"                  : "org.slf4j:slf4j-api:1.7.36",
-        "logback-classic"            : "ch.qos.logback:logback-classic:1.2.11",
         //copy
         "mybatis-spring-boot-starter": "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisSpringBootStarterVersion}",
         //test
@@ -67,7 +67,13 @@ ext {
         //cache
         "mybatis-ehcache"            : "org.mybatis.caches:mybatis-ehcache:1.2.1",
         "mybatis-redis"              : "org.mybatis.caches:mybatis-redis:1.0.0-beta2",
-        "mybatis-caffeine"           : "org.mybatis.caches:mybatis-caffeine:1.0.0"
+        "mybatis-caffeine"           : "org.mybatis.caches:mybatis-caffeine:1.0.0",
+        //code generator
+        "velocity"            : "org.apache.velocity:velocity-engine-core:2.3",
+        "freemarker"          : "org.freemarker:freemarker:2.3.31",
+        "beetl"               : "com.ibeetl:beetl:3.7.0.RELEASE",
+        "swagger-annotations" : "io.swagger:swagger-annotations:1.6.2",
+        "enjoy"               : "com.jfinal:enjoy:5.0.0",
     ]
 }
 
@@ -95,7 +101,6 @@ subprojects {
         testImplementation "${lib["junit-jupiter"]}"
         testImplementation "org.mockito:mockito-junit-jupiter:4.6.1"
         testImplementation "${lib["lagarto"]}"
-        testImplementation "${lib["logback-classic"]}"
     }
 
     tasks.withType(JavaCompile) {
@@ -169,7 +174,12 @@ subprojects {
     test {
         dependsOn("cleanTest", "generatePomFileForMavenJavaPublication")
         useJUnitPlatform()
+        // 解决 IdeaProxyLambdaMetaTest 和 LambdaUtilsTest 测试失败问题
+        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
         exclude("**/phoenix/**")
+        exclude("**/postgresql/**")
+        exclude("**/generator/**")
     }
 
     task javadocJar(type: Jar) {
